--- a/toDo.txt
+++ b/toDo.txt
@@ -1,10 +1,18 @@
 Blog:
-1) Load More posts button
-2) Remove current post from lists of posts on single post page.
 3) Featured thumbnails in index display
+4) Add option for inspiration slideshow or simple image
+5) Tag and Archive Pages
+6) Social Sharing
+7) Inspiration ICON for suck posts in index
 
 Landing Pages:
 1) Make Poster for background videos unique
 2) Video intro creates navigation box shadow issue.
 3) Poster flashes before play of video
 4) Youtube icon shown on pause
+
+
+General:
+1) Install WP SEO plugin -- will use for Facebook Open Graph
+2) Set WP option to allow site to be indexed by search engines
+3) Caching software.
