--- a/toDo.txt
+++ b/toDo.txt
@@ -2,12 +2,13 @@ Blog:
 4) Add option for inspiration slideshow or simple image
 10) Related Posts list -- remove current
 11) Author Page
-12) Start Blog Widget on specific category
+12) Start Blog Widget on a specific category
 
 
 
 Landing Pages:
 2) Video intro creates navigation box shadow issue.
+3) FAQ section (open close content)
 
 
 General:
@@ -15,3 +16,6 @@ General:
 2) Set WP option to allow site to be indexed by search engines
 3) Caching software.
 4) 404 page
+
+Trainings:
+1) Section Option for the layout with FAQ like open/close buttons
