--- a/toDo.txt
+++ b/toDo.txt
@@ -2,15 +2,15 @@ Blog:
 4) Add option for inspiration slideshow
 12) Start Blog Widget on a specific category
 18) port content from production site
-19) Check to see if inspiration posts display sidebar MINUS current item
-
-
+19) remove current post from list of inspiration posts in sidebar
+20) Posts other than Partner in slider
+21) Next post
 
 
 Landing Pages:
 2) Video intro creates navigation box shadow issue.
 3) Full width image slider is to be updated. (who we are)
-4) No account for linkedin --- team widget
+4) Don't display social network if the user doesn't input anything --- team widget
 5) Different post types other than partners
 6) Photo Gallery -- center
 
@@ -20,11 +20,9 @@ General:
 2) Set WP option to allow site to be indexed by search engines
 3) Caching software.
 4) 404 page
-5) Privileged level access
 6) favicon
+7) Flyout doesn't close consistently using the X
 
-Trainings:
-1) Section Option for the layout with FAQ like open/close buttons
-
-Contact Page:
-1) Where's the form going?
+Questions for Michelle:
+1) Where's the form going on contact page?
+2) Full width image slider is to be updated -- who we are page -- what should we do with that?
