Blog catStart issue / homepage navigation issue / search results

--- a/toDo.txt
+++ b/toDo.txt
@@ -1,8 +1,5 @@
 Blog:
-12) When an admin selects FULL WIDTH -> BLOG BLOCK -> there should be an option to select default category -- otherwise it's just the latest news.
-18) port content from production site
 19) remove current post from list of inspiration posts in sidebar
-20) Have more blog posts slide up from bottom;
 21) Video fallback from Mobile
 22) Single Post Page -- show slideup for next post
 
@@ -26,9 +23,5 @@ Questions for Michelle:
 1) Where's the form going on contact page?
 2) Full width image slider is to be updated -- who we are page -- what should we do with that?
 3) Where does donate link go?
+4) Would the Campaigns section in blue toward the footer be "de-apped"
 
-Completed:
-Home
-Who we are
-What We Do
-Talk to Us
